test merge datasets

--- a/tox.ini
+++ b/tox.ini
@@ -4,5 +4,6 @@ env_list=py{38,39,310,311}
 [testenv]
 deps =
   pytest
+  pytest-cov
 commands =
-  pytest {posargs:tests}
+  pytest --cov-report html --cov=dbml_to_fides tests/ {posargs:tests}
