include support for column notes

--- a/tests/data/sample_dataset.yml
+++ b/tests/data/sample_dataset.yml
@@ -50,7 +50,7 @@ dataset:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
     - name: body
-      description: Post's body
+      description: Content of the post
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
