--- a/.fides/sample_dataset.yml
+++ b/.fides/sample_dataset.yml
@@ -9,7 +9,7 @@ dataset:
   retention: 30 days after account deletion
   collections:
   - name: users
-    description: User information
+    description: Users
     fields:
     - name: id
       fides_meta:
@@ -35,7 +35,7 @@ dataset:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
   - name: posts
-    description: Post information
+    description: All the content you crave
     fields:
     - name: id
       fides_meta:
@@ -50,7 +50,7 @@ dataset:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
     - name: body
-      description: Post's body
+      description: Content of the post
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
