--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [ # Optional
   "fideslang",
   "pydbml",
   "pyaml",
+  "typing_extensions<4.6.0",
 ]
 
 [project.urls]  # Optional
