--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [ # Optional
   "click",
   "deepmerge",
   "fideslang",
-  "pydbml",
+  "pydbml>=1.0.9,<2.0",
   "pyaml",
   "typing_extensions<4.6.0",
 ]
